Fixed display of bio tags on mobile, forced two lines

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,6 +154,11 @@
 		margin: 0 0 2rem 0;
 	}
 
+	p span 
+	{
+		display: block;
+	}
+
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
 		font-weight: 600;
